@@ -1448,7 +1448,8 @@ order by
 
     def getTroveContainers(self, l):
         cu = self.db.cursor()
-        cu.execute("CREATE TEMPORARY TABLE ftc(idx INTEGER, name STRING, "
+        cu.execute("CREATE TEMPORARY TABLE ftc(idx INTEGER PRIMARY KEY, "
+                                              "name STRING, "
                                               "version STRING, "
                                               "flavor STRING)",
                                               start_transaction = False)
@@ -1459,26 +1460,28 @@ order by
                        start_transaction = False)
             result.append([])
 
-        cu.execute("""SELECT idx, Instances.troveName, Versions.version,
+        cu.execute("""SELECT idx, instances.troveName, Versions.version,
                              Flavors.flavor, flags
-                        FROM ftc JOIN Versions AS IncVersion ON
-                            ftc.version = IncVersion.version
-                        JOIN Flavors AS IncFlavor ON
-                            ftc.flavor = IncFlavor.flavor OR
-                            (ftc.flavor = "" AND IncFlavor.flavor IS NULL)
-                        JOIN Instances AS IncInst ON
-                            ftc.name = IncInst.troveName AND
-                            IncVersion.versionId = IncInst.versionId AND
-                            IncFlavor.flavorId = IncInst.flavorId
-                        JOIN TroveTroves ON
-                            IncInst.instanceId = TroveTroves.includedId
-                        JOIN Instances ON
-                            TroveTroves.instanceId = Instances.instanceId
-                        JOIN Flavors ON
-                            Instances.flavorId = Flavors.flavorId
-                        JOIN Versions ON
-                            Instances.versionId = Versions.versionId
-                """)
+                      FROM ftc
+                      JOIN Instances AS IncInst ON
+                          IncInst.troveName = ftc.name
+                      JOIN Versions AS IncVersion ON
+                          IncVersion.versionId = IncInst.versionId
+                      JOIN Flavors AS IncFlavor ON
+                          IncFlavor.flavorId = IncInst.flavorId
+                      JOIN TroveTroves ON
+                          TroveTroves.includedId = IncInst.instanceId
+                      JOIN Instances ON
+                          Instances.instanceId = TroveTroves.includedId
+                      JOIN Versions ON
+                          Versions.versionId = Instances.versionId
+                      JOIN Flavors ON
+                          Flavors.flavorId = Instances.flavorId
+                      WHERE
+                          IncVersion.version = ftc.version AND
+                          (IncFlavor.flavor = ftc.flavor OR
+                           (IncFlavor.flavor IS NULL AND ftc.flavor = ""))
+                   """)
         for (idx, name, version, flavor, flags) in cu:
             if flags & schema.TROVE_TROVES_WEAKREF:
                 # don't include weak references, they are not direct
